--- a/scss/components/_dotlines.scss
+++ b/scss/components/_dotlines.scss
@@ -23,6 +23,20 @@
 		}
 	}
 
+	&.dotline-right {
+		margin-left: auto;
+		margin-right: toRem(20px);
+	}
+
+	.dotline-label {
+		font-family: var(--font-emphasis);
+		font-size: toRem(14px);
+		color: var(--blades-white);
+		text-transform: uppercase;
+		line-height: toRem(14px);
+		margin-right: toRem(5px);
+	}
+
 	.dot {
 		--dot-frame-color: var(--frame-color, var(--blades-white));
 		--dot-frame-color-empty: var(--frame-color-empty, var(--dot-frame-color));
