--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -160,6 +160,9 @@
 					</a>
 					{{/if}}
 					<span class="tab-title">Crew Upgrades</span>
+					{{#if (test items.playbook "&&" (test actor.availableUpgradePoints ">" 0)) }}
+					{{> "systems/eunos-blades/templates/parts/dotline.hbs" upgradeData.dotline }}
+					{{/if}}
 				</label>
 
 				{{#each items.upgrades}}
@@ -183,6 +186,9 @@
 					</a>
 					{{/if}}
 					<span class="tab-title">Crew Abilities</span>
+					{{#if (test items.playbook "&&" (test actor.availableAbilityPoints ">" 0)) }}
+					{{> "systems/eunos-blades/templates/parts/dotline.hbs" abilityData.dotline }}
+					{{/if}}
 				</label>
 
 				{{#each items.abilities}}
@@ -227,6 +233,9 @@
 						<i class="fas fa-plus-square"></i>
 					</a>
 					<span class="tab-title">Cohorts</span>
+					{{#if (test items.playbook "&&" (test actor.availableCohortPoints ">" 0)) }}
+					{{> "systems/eunos-blades/templates/parts/dotline.hbs" cohortData.dotline }}
+					{{/if}}
 				</label>
 
 				{{#each items.cohorts}}
@@ -250,16 +259,12 @@
 			{{!-- GM-ONLY TABS --}}
 			{{#if isGM}}
 
-			{{!-- GM Notes Tab --}}
+			{{!-- GM Notes & Effects Tab --}}
 			<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
 				<label class="tab-label">
 					<span class="tab-title">GM Notes</span>
 				</label>
 				{{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
-			</div>
-
-			{{!-- Active Effects Tab --}}
-			<div class="tab effects flex-vertical" data-tab="effects">
 				<label class="tab-label">
 					<span class="tab-title">{{localize "BITD.Effects"}}</span>
 				</label>
@@ -274,8 +279,9 @@
 
 				{{#each actor.items as |item id|}}
 				{{> "systems/eunos-blades/templates/components/comp.hbs" item
-				id=id
+				id=item.id
 				class="comp-desc-trait comp-horizontal full-width"
+				docType="Item"
 				remFullButton=true
 				}}
 				{{/each}}
