--- a/templates/items/gm_tracker-sheet.hbs
+++ b/templates/items/gm_tracker-sheet.hbs
@@ -1,12 +1,20 @@
-<form class="{{cssClass}} actor-sheet" autocomplete="off">
+<form class="{{cssClass}} tracker-sheet" autocomplete="off">
+	{{log "Tracker Sheet" this}}
 
-	<section class="sheet-top">
-		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
-	</section>
+	{{!-- Sheet Container --}}
+	<div class="sheet-root">
+		<section class="sheet-top">
+		</section>
+		<section class="sheet-mid-bar flex-vertical full-width">
+			<select class="phase-select" data-dtype="String" name="system.game_phase">
+				{{#select system.game_phase}}
+				<option value="" hidden disabled selected></option>
+				{{#each system.phases}}
+				<option value="{{this}}">{{localize this}}</option>
+				{{/each}}
+				{{/select}}
+			</select>
+		</section>
 
-	<section class="item-main flex-vertical">
 
-
-	</section>
 </form>
