--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -18,6 +18,7 @@
 
 	{{!-- Sheet Container --}}
 	<div class="sheet-root">
+
 		{{!-- Header --}}
 		<section class="sheet-top">
 
@@ -176,6 +177,7 @@
 			</table>
 		</section>
 
+		{{!-- Split Panel: Tabs, Tab Navigation /// Attributes --}}
 		<div class="split-panel full-width">
 			{{!-- Navigable Tabs --}}
 			<section class="tab-content nav-group flex-vertical">
