--- a/templates/parts/active-effects.hbs
+++ b/templates/parts/active-effects.hbs
@@ -1,5 +1,5 @@
 <table class="items-list effects-list">
-	{{#each effects as |effect|}}
+	{{#each activeEffects as |effect|}}
 		{{#if effect.system.label}}
 		<tr class="item effect" data-effect-id="{{effect.id}}">
 			<td style="width: 30px;">
