--- a/scss/core/_reset.scss
+++ b/scss/core/_reset.scss
@@ -139,6 +139,7 @@
     background: var(--blades-black-dark);
     justify-content: space-between;
     align-items: center;
+		padding: 0 0 0 20px;
     > * {
         flex-basis: auto;
         flex-shrink: 0.5;
