--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -1,10 +1,7 @@
 <form class="{{cssClass}} actor-sheet" autocomplete="off">
 
-	{{!-- Crew Img: Portrait & Background Overlay --}}
+	{{!-- Actor Img: Portrait --}}
 	<img class="sheet-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
-	{{!-- <div class="sheet-img-bg full-width">
-		<img src="{{actor.img}}" />
-	</div> --}}
 
 	{{!-- Playbook XP --}}
 	{{#if items.playbook}}
@@ -18,6 +15,7 @@
 
 	{{!-- Sheet Container --}}
 	<div class="sheet-root">
+
 		{{!-- Header --}}
 		<section class="sheet-top">
 
@@ -123,8 +121,7 @@
 
 		</section>
 
-
-		{{!-- Navigable Tabs --}}
+		{{!-- Tabs, Tab Navication --}}
 		<section class="tab-content nav-group flex-vertical">
 			{{!-- Nav menu --}}
 			<nav class="nav-tabs flex-horizontal">
@@ -290,5 +287,6 @@
 			{{/if}}
 
 		</section>
+
 	</div>
 </form>
