--- a/templates/faction-sheet.hbs
+++ b/templates/faction-sheet.hbs
@@ -1,81 +1,64 @@
 <form class="{{cssClass}} actor-sheet" autocomplete="off">
-  <div class="sheet-root">
 
-    {{#if isGM}}
-    <input type="text" class="tag-entry" />
-    {{/if}}
-  <section id="factions" class="flex-horizontal">
-	<div id="factions-section" class="flex-vertical grow-two">
-	  <div class="tab flex-vertical">
-		<div class="label-stripe">
-           <p>{{localize "BITD.Factions"}}</p>
-          <p><a class="comp-control comp-add" data-item-type="faction"><i class="fas fa-plus-square"></i></a></p>
-        </div>
-
-        <div id="faction-list">
-          {{#each actor.items as |faction id|}}
-          {{#if (eq faction.type "faction")}}
-
-			<div id="faction-{{faction._id}}-items" class="faction-items label-stripe-gray item flex-horizontal" data-item-id="{{faction._id}}">
-              <a class="item-body flex-horizontal">
-                <img src="{{faction.img}}" title="{{faction.name}}" width="24" height="24"/>
-				<div class="comp-title">{{faction.name}}<br>{{localize "BITD.Tier"}}: {{faction.system.tier}}</div>
-			  </a>
-			  <a class="comp-control comp-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i class="fas fa-trash"></i></a>
-
-			  <div id="faction-status">
-				<div id="faction-status-label" style="float:left; width: 10em; text-align: right; padding-right: 10px; color: var(--almost_white);">{{localize "BITD.Status"}}<br><span style="color: var(--{{#if (eq faction.system.status.value 7)}}holoblue{{/if}}{{#if (eq faction.system.status.value 6)}}holobluemed{{/if}}{{#if (eq faction.system.status.value 5)}}holobluelt{{/if}}{{#if (eq faction.system.status.value 4)}}almost_white{{/if}}{{#if (eq faction.system.status.value 3)}}redlt{{/if}}{{#if (eq faction.system.status.value 2)}}redmed{{/if}}{{#if (eq faction.system.status.value 1)}}red{{/if}}{{#if (eq faction.system.status.value 0)}}almost_white{{/if}});">{{#if (eq faction.system.status.value 7)}}{{localize "BITD.Allies"}}{{/if}}{{#if (eq faction.system.status.value 6)}}{{localize "BITD.Friends"}}{{/if}}{{#if (eq faction.system.status.value 5)}}{{localize "BITD.Associates"}}{{/if}}{{#if (eq faction.system.status.value 4)}}{{localize "BITD.Neutral"}}{{/if}}{{#if (eq faction.system.status.value 3)}}{{localize "BITD.Adversaries"}}{{/if}}{{#if (eq faction.system.status.value 2)}}{{localize "BITD.Enemies"}}{{/if}}{{#if (eq faction.system.status.value 1)}}{{localize "BITD.AtWar"}}{{/if}}{{#if (eq faction.system.status.value 0)}}{{localize "BITD.Neutral"}}{{/if}}</span></div>
-				<!-- <label for="faction-{{id}}-status-0"><i class="fab fa-creative-commons-zero nullifier"></i></label> -->
-				<div id="faction-status-meter" class="teeth-experience-faction" style="float:left; width: 14em;">
-				{{#multiboxes faction.system.status.value}}
-					<div style="display: flex;justify-content: space-between"><input class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="0" type="radio" id="faction-{{id}}-status-0" value="0">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="1" type="radio" id="faction-{{id}}-status-1" value="1">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="2" type="radio" id="faction-{{id}}-status-2" value="2">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="3" type="radio" id="faction-{{id}}-status-3" value="3">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="4" type="radio" id="faction-{{id}}-status-4" value="4">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="5" type="radio" id="faction-{{id}}-status-5" value="5">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="6" type="radio" id="faction-{{id}}-status-6" value="6">
-					<input data-dtype="Number" class="update-box" data-utype="status" data-item="{{faction._id}}" data-value="7" type="radio" id="faction-{{id}}-status-7" value="7">
-					</div><div style="text-align: justify;padding:2px 2px 0px 5px">
-					<label for="faction-{{id}}-status-0" style="color:red">D</label>
-					<label for="faction-{{id}}-status-1" style="color:red">3</label>
-					<label for="faction-{{id}}-status-2" style="color:red">2</label>
-					<label for="faction-{{id}}-status-3" style="color:red">1</label>
-					<label for="faction-{{id}}-status-4" style="color:white">0</label>
-					<label for="faction-{{id}}-status-5" style="color:deepskyblue">1</label>
-					<label for="faction-{{id}}-status-6" style="color:deepskyblue">2</label>
-					<label for="faction-{{id}}-status-7" style="color:deepskyblue">3</label>
-				  <span style="width: 100%;display: inline-block;"> </span></div>
-				{{/multiboxes}}
-				</div>
-			  </div>
-
-			  <div id="crew-hold" class="flex-horizontal">
-				<div class="black-label">{{localize "BITD.Hold"}}</div>
-				{{#multiboxes faction.system.hold.value}}
-				<div class="flex-horizontal">
-				  <div class="gray-label">{{localize "BITD.Weak"}}</div>
-				  <input data-dtype="Number" class="update-box" data-utype="hold" data-item="{{faction._id}}" data-value="1" type="radio" id="faction-{{id}}-hold-1" value="1">
-				  <label for="faction-{{id}}-hold-1"></label>
-				</div>
-				<div class="flex-horizontal">
-				  <div class="gray-label">{{localize "BITD.Strong"}}</div>
-				  <input data-dtype="Number" class="update-box" data-utype="hold" data-item="{{faction._id}}" data-value="2" type="radio" id="faction-{{id}}-hold-2" value="2">
-				  <label for="faction-{{id}}-hold-2"></label>
-				</div>
-				{{/multiboxes}}
-			  </div>
-
-
-
-
-		  </div>
-          {{/if}}
-          {{/each}}
-          <div class="item-playbook-label"><a class="comp-control comp-add" data-item-type="faction">{{localize "BITD.AddItem"}}</a></div>
-        </div>
-	  </div>
+	{{!-- Actor Img: Portrait & Background Overlay --}}
+	<img class="sheet-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+	<div class="sheet-img-bg full-width">
+		<img src="{{actor.img}}" />
 	</div>
+
+	{{!-- Sheet Container --}}
+	<div class="sheet-root">
+		{{!-- Header --}}
+		<section class="sheet-top">
+
+			<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
+	</section>
+
+  <section class="item-main flex-vertical">
+		<label class="label-stripe">{{localize "BITD.Description"}}</label>
+			<textarea rows="2" name="system.description">{{system.description}}</textarea>
+		<label class="label-stripe">{{localize "BITD.FactionType"}}</label>
+			{{system.type}}<br><br>
+		<label class="label-stripe">{{localize "BITD.Tier"}}</label>
+			<textarea rows="1" name="system.tier">{{system.tier}}</textarea>
+		<label class="label-stripe">{{localize "BITD.Notes"}}</label>
+			<textarea rows="2" name="system.notes">{{system.notes}}</textarea>
+
+			{{#if isGM }}
+					<label class="label-stripe">{{localize "BITD.Goal"}}</label>
+					<div class="flex-horizontal clock-block" id="faction-goal-clock">
+
+						<div class="goal-clock clock-container flex-vertical">
+							{{> "systems/eunos-blades/templates/components/clock.hbs"
+							target="system.goal_1.value"
+							data=goal_1_clock
+							}}
+							<textarea name="system.goal_1.name">{{system.goal_1.name}}</textarea>
+						</div>
+						<div class="goal-clock clock-container flex-vertical">
+							{{> "systems/eunos-blades/templates/components/clock.hbs"
+							target="system.goal_2.value"
+							data=goal_2_clock
+							}}
+							<textarea name="system.goal_2.name">{{system.goal_2.name}}</textarea>
+						</div>
+
+					</div>
+					<label class="label-stripe">{{localize "BITD.NotableNPCs"}}</label>
+					<textarea rows="10" name="system.notables">{{system.notables}}</textarea>
+					<label class="label-stripe">{{localize "BITD.Turf"}}</label>
+					<textarea rows="2" name="system.turf">{{system.turf}}</textarea>
+					<label class="label-stripe">{{localize "BITD.Assets"}}</label>
+					<textarea rows="1" name="system.assets">{{system.assets}}</textarea>
+					<label class="label-stripe">{{localize "BITD.Quirks"}}</label>
+					<textarea rows="1" name="system.quirks">{{system.quirks}}</textarea>
+					<label class="label-stripe">{{localize "BITD.Allies"}}</label>
+					<textarea rows="1" name="system.allies">{{system.allies}}</textarea>
+					<label class="label-stripe">{{localize "BITD.Enemies"}}</label>
+					<textarea rows="1" name="system.enemies">{{system.enemies}}</textarea>
+					<label class="label-stripe">{{localize "BITD.Situation"}}</label>
+					<textarea rows="10" name="system.situation">{{system.situation}}</textarea>
+			{{/if}}
   </section>
-</div>
+	</div>
 </form>
